--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 								<div class="elementor-element elementor-element-3b31dd7 elementor-align-center elementor-widget elementor-widget-button" data-id="3b31dd7" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://pay.kiwify.com.br/DKoyTS8" class="elementor-button-link elementor-button elementor-size-sm" role="button">
+			<a href="https://pay.kiwify.com.br/dpuCXYt" class="elementor-button-link elementor-button elementor-size-sm" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-text">QUERO MEU ACESSO AGORA</span>
 		</span>
